# chai-s-romashkoi

./: .claudeignore  .gitignore  CLAUDE.md  README.md  dev.sh
.claude/: settings.json
.claude/agents/: architect.md  dynamodb_architect.md  frontend_developer.md  infrastructure_engineer.md  python_developer.md
.claude/hooks/: check_file_access.py
.claude/skills/analyze/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/kill-local/: SKILL.md
.claude/skills/lambda-developer/: SKILL.md
.claude/skills/python-developer/: SKILL.md
.claude/skills/run-local/: SKILL.md
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml  e2e.yml  recreate.yml
backend/: .env  CLAUDE.md  dev_server.py  pyproject.toml
backend/src/: auth.py  auth_handler.py  session_guard.py
backend/src/app/: dispatcher.py  handler.py
backend/src/dev/: server.py
backend/src/hello/: handler.py
backend/src/log/: domain.py  handler.py  repository.py
backend/src/profile/: domain.py  handler.py  repository.py  tags.py
backend/src/relations/: domain.py  handler.py  label_suggestions.py  repository.py
backend/tests/: conftest.py  test_auth.py  test_log_domain.py  test_log_handler.py  test_log_repository.py  test_profile_repository.py  test_relations_domain.py  test_relations_repository.py
deploy/: build.sh  domain.tf  main.tf  outputs.tf  variables.tf
deploy/bootstrap/: main.tf  outputs.tf  variables.tf
deploy/modules/frontend/: main.tf  outputs.tf  variables.tf
deploy/modules/lambda/: main.tf  outputs.tf  variables.tf
docs/adr/: 001-google-oauth-authentication.md  003-user-profile-tagged-entries.md  005-add-relations-between-users.md  007-personal-log-chat.md  009-ci-cd-pipeline.md
frontend/: .env  .env.development  .env.e2e  .env.production  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  vite-env.d.ts
frontend/src/lib/: AppPage.svelte  ChatMessageList.svelte  ChatMessageRow.svelte  ChatPage.svelte  HomePage.svelte  LabelCombobox.svelte  LoginPage.dev.svelte  LoginPage.e2e.svelte  LoginPage.svelte  ProfileEditor.svelte  ProfileEntryRow.svelte  ProfilePage.svelte  RelationRow.svelte  RelationsPanel.svelte  TagCombobox.svelte  app_cache.svelte.ts  auth_service.dev.ts  auth_service.ts  chat_types.ts  home_service.ts  http_utils.ts  (+3 more)
integration_tests/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  start-mock-server.mjs  test-constants.ts  tsconfig.json
integration_tests/tests/: log.test.ts  login.test.ts  profile.test.ts  relations.test.ts
scripts/: build_lambdas.sh  e2e.sh  local_kill.sh  local_run.sh  migrate_docs_to_wiki.sh  publish_adr.sh
(+8 files in other folders)
