[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.0.5",
    "pyjwt[cryptography]>=2.12.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "boto3>=1.38.0",
    "boto3-stubs[dynamodb]>=1.38.0",
    "fastapi>=0.115.0",
    "moto[dynamodb]>=5.0.0",
    "mypy>=1.20.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.9",
    "types-cachetools>=6.2.0.20260408",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/auth.py", "src/auth_handler.py", "src/profile", "src/dev", "src/session_guard.py"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
files = ["src"]
